mpi Matrix Vector multiplication

--- a/Assignment/parallel-1/mpi/makefile
+++ b/Assignment/parallel-1/mpi/makefile
@@ -1,10 +1,14 @@
-EXECS=send_recv
+EXECS=send_recv MatrixVectorMul
 MPICC=mpicc
+MPICPP=mpic++
 
 all: ${EXECS}
 
 send_recv: send_recv.c
 	${MPICC} send_recv.c -o send_recv
+
+MatrixVectorMul: MatrixVectorMul.cpp
+	${MPICPP} MatrixVectorMul.cpp -o MatrixVectorMul
 
 #clean here
 
